--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,13 @@
         <module>strategy-pattern</module>
         <module>state-pattern</module>
         <module>united-strategy-template</module>
+        <module>singleton-pattern</module>
+        <module>simple-factory-pattern</module>
+        <module>factory-method-pattern</module>
+        <module>abstract-factory-pattern</module>
+        <module>builder-pattern</module>
+        <module>prototype-pattern</module>
+        <module>command-pattern</module>
     </modules>
 
     <properties>
