中介者模式-案例代码

--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>builder-pattern</module>
         <module>prototype-pattern</module>
         <module>command-pattern</module>
+        <module>mediator-pattern</module>
     </modules>
 
     <properties>
